# agent-memory

./: .env.example  .gitignore  README.md  README.old.md  agent_memory_design.md  agent_memory_implementation_design.md  pyproject.toml  run_server.py
client/: __init__.py  memory_client.py
demo/: README.md  __init__.py  interactive_demo.py  interactive_demo_live.py  requirements_demo.txt  run_demo.bat  setup_cosmosdb.py  test.py
docs/: IMPLEMENTATION_SUMMARY.md  REMOTE_SERVICE.md
examples/: README.md  demo1_financial_advisor.py  demo2_shopping_assistant.py  demo3_learning_assistant.py  demo4_medical_assistant.py  simple_usage.py
memory/: __init__.py  config.py  cosmos_agent_memory.py  cosmos_memory_provider.py  cosmos_memory_provider_embedded.py  cosmos_utils.py  current_memory_keeper.py  fact_retrieval.py  models.py  orchestrator.py  prompts.py  provider_config.py  reflection.py  session_pool.py
server/: __init__.py  config.py  main.py
tests/: __init__.py  run_integration_tests.py  run_provider_tests.py  run_tests.py
